--- a/cuby-energy-advisor/package.json
+++ b/cuby-energy-advisor/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^2.0.50",
     "@ai-sdk/google": "^2.0.44",
     "@ai-sdk/openai": "^2.0.74",
     "@ai-sdk/react": "^2.0.104",
